Updated project and added gitignore